# LACT-PLC-1

./: .gitignore  IMG_0770.HEIC  IMG_0771.HEIC  IMG_9849.HEIC  IMG_9850.HEIC  IMG_9851.HEIC  IMG_9852.HEIC  IMG_9853.HEIC  IMG_9854.HEIC  IMG_9856.HEIC  IMG_9857.HEIC  IMG_9858.HEIC  IMG_9859.HEIC  IMG_9860.HEIC  IMG_9861.HEIC  IMG_9862.HEIC  IMG_9863.HEIC  IMG_9864.HEIC  IMG_9865.HEIC  IMG_9866.HEIC  Makefile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
console/: cli.py  tui.py
docs/: commissioning.md  io-mapping.md  process-flow.md  system-overview.md  test-guidelines.md
plc/: __init__.py
plc/config/: __init__.py  alarms.py  io_map.py  setpoints.py
plc/core/: __init__.py  controller.py  data_store.py  safety.py  state_machine.py
plc/drivers/: __init__.py  io_handler.py  modbus_driver.py  simulator.py
plc/fleet/: __init__.py  components.py  config_generator.py  fleet_manager.py  flow_graph.py  intake.py  photo_analyzer.py  unit_profile.py
plc/modules/: __init__.py  bsw_monitor.py  divert_valve.py  flow_measurement.py  pressure_monitor.py  proving.py  pump_control.py  sampler.py  temperature.py
plc/testing/: __init__.py  scenario_runner.py
tests/: conftest.py  test_bsw_monitor.py  test_components.py  test_config_generator.py  test_controller.py  test_data_store.py  test_fleet_manager.py  test_flow_graph.py  test_flow_measurement.py  test_intake.py  test_io_handler.py  test_photo_analyzer.py  test_proving.py  test_pump_control.py  test_safety.py  test_sampler.py  test_scenarios.py  test_state_machine.py  test_unit_profile.py
