[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lact-plc"
version = "1.0.0"
description = "PLC Control System for SCS Technologies 3\" LACT Unit with Smith E3-S1 PD Meter"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
modbus = ["pymodbus>=3.6"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "pymodbus>=3.6",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
lact = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["plc*", "console*"]
